--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
   "devDependencies": {},
   "author": "",
   "license": "ISC",
-  "description": "basic express app"
+  "description": "Basic express app to serve some HTML"
 }
